# FinanceAPI

./: .gitignore  LICENSE  README.md  finance.db  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py
app/models/: __init__.py  account.py  journal_entry.py  payroll.py  retirement.py  tax.py
app/routers/: accounts.py  journal_entries.py  payroll.py  reports.py  retirement.py  tax.py
app/schemas/: account.py  journal_entry.py  payroll.py  retirement.py  tax.py
app/services/: account_service.py  journal_entry_service.py  payroll_service.py  report_service.py  retirement_service.py  tax_service.py
