[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "financeapi"
version = "1.0.0"
description = "A robust personal finance monitoring API with double-entry accounting"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
financeapi = "uvicorn app.main:app"
